# Multistructured-Problems-LK-GOMEA

./: CITATION.cff  readme.md
source-multiobjective/: .gitignore  20211025-domination-and-scalarized.py  20211027-domination-and-scalarized-fiproj.py  20211101-paper-multiobjective.py  20211124-localsearch.py  20211125-filtered-linkage.py  20211127-filtered-linkage-log2pop.py  20211127-filtered-linkage-randomk.py  20211201-paper-multiobjective-filteringzeroes.py  20211201-paper-multiobjective-small-batch.py  20211207-paper-multiobjective.py  20211210-paper-multiobjective-dynamick.py  MO_GOMEA.cpp  README.md  build.sh  csvify.py  csvify_e.py  csvify_hv.py  csvify_statistics.py  debuggy.txt  generate_experiments_mo0_trap5.py  generate_experiments_mo0_zeromaxonemax.py  generate_experiments_mo1_maxcut.py  how-to-print-a-stacktrace.txt  meson.build  run_experiments.sh  run_knapsack.sh  run_lotz.sh  run_maxcut.sh  run_onemax.sh  run_trap5.sh
source-multiobjective/bestoftraps/: bot_n100k5fns16s0.txt  bot_n100k5fns16s1.txt  bot_n100k5fns2s0.txt  bot_n100k5fns2s1.txt  bot_n100k5fns4s1.txt  bot_n100k5fns8s1.txt  bot_n12k5fns16s0.txt  bot_n12k5fns2s1.txt  bot_n12k5fns4s1.txt  bot_n12k5fns8s1.txt  bot_n25k5fns16s1.txt  bot_n25k5fns2s1.txt  bot_n25k5fns8s1.txt  bot_n50k5fns1s0.txt  bot_n50k5fns1s1.txt  bot_n50k5fns8s0.txt  bot_n50k5fns8s1.txt  bot_n6k5fns16s0.txt  bot_n6k5fns16s1.txt  bot_n6k5fns2s0.txt  bot_n6k5fns2s1.txt  bot_n6k5fns4s0.txt  bot_n6k5fns8s1.txt  botd_n100k5s0fn11.txt  botd_n100k5s0fn2.txt  botd_n100k5s0fn3.txt  botd_n100k5s0fn4.txt  botd_n100k5s0fn5.txt  botd_n100k5s0fn6.txt  botd_n100k5s0fn8.txt  botd_n100k5s1fn0.txt  botd_n100k5s1fn1.txt  botd_n100k5s1fn11.txt  botd_n100k5s1fn12.txt  botd_n100k5s1fn2.txt  botd_n100k5s1fn6.txt  botd_n100k5s1fn7.txt  botd_n100k5s1fn8.txt  botd_n12k5s0fn10.txt  botd_n12k5s0fn11.txt  (+61 more)
source-multiobjective/exploratory_experiments/: 20210713-run_maxcut_vs_onemax_set_a.sh  20210713-run_maxcut_vs_onemax_set_b.sh  20210715-run_maxcut_vs_maxcut.sh  20210826-hv-maxcut-generator.py  20210830-hv-maxcut-generator-scalarized.py  20210901-approximate_front.py  20210903-mo-benchmark-a.py  20210906-mo-benchmark-a-rerun-where-issues.py  20210906-mo-benchmark-b.py  20210917-mo-benchmark-b-lines.py  20211005-which-front-adjustment-is-better.py  20211007-foa-part-2.py  20211007-foa-part-3.py  20211007-foa-part-4.py  20211007-foa-reference.py  20211020-domination-only.py  20211115-nmi-vs-mi.py  20211116-nmi-vs-mi-donorsearch.py  20211116-nmi-vs-mi-extra.py  20211116-nmi-vs-mi-mixaton.py  20211116-nmi-vs-mi-no-fi.py  20211123-nmi-vs-mi-rt.py
source-multiobjective/knapsack/: knapsack.100.2.txt  knapsack.250.2.pareto  knapsack.250.2.txt  knapsack.500.2.pareto  knapsack.500.2.txt  knapsack.750.2.pareto  knapsack.750.2.txt
source-multiobjective/maxcut/: maxcut_pareto_front_100.txt  maxcut_pareto_front_12.txt  maxcut_pareto_front_25.txt  maxcut_pareto_front_50.txt  maxcut_pareto_front_50_sorted.txt  maxcut_pareto_front_6.txt
source-multiobjective/reference_fronts/: notes.txt
source-multiobjective/utilities/: convert_archive_to_front.py  decompose_bestoftraps.py  merge_and_filter_fronts.py  merge_and_filter_fronts_bot_bot.py  merge_and_filter_fronts_bot_maxcut.py  merge_and_filter_fronts_bot_onemax.py  merge_and_filter_fronts_by_function.py
source-singleobjective/: .gitignore  20211103-paper-singleobjective-trail.py  20211103-paper-singleobjective.py  20211129-paper-singleobjective.py  20211220-paper-singleobjective.py  20211223-paper-singleobjective-maxcut-bonus.py  20220124-paper-singleobjective-fixed-limit.py  20220125-paper-singleobjective-worst-of-traps.py  Makefile  README.md  command_parallel.txt  csvify.py  example_run.sh  example_run_2.sh  example_run_3.sh  experiments_sat_test.txt  files  generate_maxcut.py  meson.build  run_experiments.sh  run_experiments_multicore.sh  run_gom_population_sequential.py  run_maxcut_parallel.sh  run_parallel_gom.py  shuffle_maxcut.py  update_files.sh
source-singleobjective/DSMGA-II-TwoEdge-master-PopFree/: .gitignore  Makefile  README  README.md  bestoftraps.cpp  bestoftraps.h  (+24 more)
(+295 files in other folders)
