project('DSMGA-II-TwoEdge-master-PopFree', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++17'])

files = [
  'dsmga2.cpp',
  'chromosome.cpp',
  'fastcounting.cpp',
  # 'genZobrist.cpp',
  'global.cpp',
  'main.cpp',
  'mt19937ar.cpp',
  'myrand.cpp',
  'nk-wa.cpp',
  'problems.cpp',
  'sat.cpp',
  'spin.cpp',
  # 'bestoftraps.cpp',
  # 'sweep.cpp',
]

executable('DSMGA2IMS',
  files,
  install : false)
